# CarTrap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ChangeLog.md  README.md  docker-compose.yml  vin_decoder.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/cartrap/: __init__.py  app.py  config.py  gateway_app.py  iaai_gateway_app.py  main.py  worker_placeholder.py
backend/tests/: test_app_boot.py  test_config.py  test_import_smoke.py  test_system_status.py  test_worker_main.py
backend/tests/admin/: conftest.py  test_admin_actions_api.py  test_admin_overview_api.py  test_admin_runtime_settings_api.py  test_admin_users_api.py
backend/tests/auction_domain/: test_models.py
backend/tests/auth/: test_invites.py  test_login.py  test_rbac.py
backend/tests/copart/: __init__.py  test_api_normalizer.py  test_gateway_backed_services.py  test_gateway_client_config.py  test_gateway_connector_flow.py  test_gateway_router.py  test_http_client.py  test_parser_lot_page.py  test_search_parser.py
backend/tests/iaai/: __init__.py  test_gateway_client_config.py  test_gateway_connector_flow.py  test_gateway_router.py  test_http_client.py  test_normalizer.py  test_service.py
backend/tests/integration/: test_dockerized_api.py
backend/tests/monitoring/: test_change_detection.py  test_polling_policy.py
backend/tests/notifications/: test_push_delivery.py  test_push_subscriptions.py
backend/tests/provider_connections/: __init__.py  test_iaai_router.py  test_repository.py  test_router.py
backend/tests/runtime_settings/: test_runtime_settings_service.py
(+163 files in other folders)
